--- a/bin/application.conf
+++ b/bin/application.conf
@@ -40,10 +40,11 @@ application.langs="en"
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
-db.url=jdbc:mysql:play-champ
-db.driver=org.mysql.Driver
-db.user=root
-db.pass=
+#MySQL connect
+#db.url=jdbc:mysql:play-champ
+#db.driver=org.mysql.Driver
+#db.user=root
+#db.pass=
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
