--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,11 +40,13 @@ application.langs="en"
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
+
 #MySQL connect
-#db.url=jdbc:mysql:play-champ
-#db.driver=org.mysql.Driver
-#db.user=root
-#db.pass=
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost:8889/champ"
+db.default.user=root
+db.default.pass=root
+
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
@@ -59,7 +61,7 @@ application.langs="en"
 # You can declare as many Ebean servers as you want.
 # By convention, the default server is named `default`
 #
-# ebean.default="models.*"
+ebean.default="models.*"
 
 # Logger
 # ~~~~~
@@ -74,4 +76,30 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
+
+# Mail
+# ~~~~~
+
+# SMTP serveur, example : smtp.gmail.com
+smtp.host=smtp.gmail.com
+
+# Mail Port, example : 465, 587 or 25
+smtp.port=587
+
+# Mail Auth User, example : user@gmail.com
+# Comment if no auth
+smtp.user="xavier.d971@gmail.com"
+
+# Mail Auth Password
+# Comment if no auth
+smtp.password=password
+
+# Mail SSL : true ou false
+smtp.ssl=true
+
+# Mail user from
+mail.from="PlayStartApp@yourdomain.com"
+
+# Mail sign
+mail.sign=The Champagne Team
 
