--- a/bin/application.conf
+++ b/bin/application.conf
@@ -41,10 +41,10 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=""
 #MySQL connect
-#db.url=jdbc:mysql:play-champ
-#db.driver=org.mysql.Driver
-#db.user=root
-#db.pass=
+db.url="jdbc:mysql://localhost:8888/champ"
+db.driver=org.mysql.jdbc.Driver
+db.user=root
+db.pass=root
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
