Login designed & implemented

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -98,7 +98,7 @@ smtp.password=password
 smtp.ssl=true
 
 # Mail user from
-mail.from="PlayStartApp@yourdomain.com"
+mail.from="info@champagne.com"
 
 # Mail sign
 mail.sign=The Champagne Team
