--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,9 +43,9 @@ db.default.url="jdbc:h2:mem:play"
 
 #MySQL connect
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost:8889/champ"
+db.default.url="jdbc:mysql://localhost/champ"
 db.default.user=root
-db.default.pass=root
+db.default.pass=""
 
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
